examples/fail/fail_exception_default_fn/brioche.bri
import * as brioche from "std";

interface TestType {
  foo: string;
  bar: string;
}

export default () => {
  throw new Error("default export exception");
}
